Large styling fixes with main section

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
                     <a href="#">Our Beers</a>
                     <a href="#">About Us</a>
                     <a href="#">Contact Us</a>
+
+
                 </nav>
                 <div>
                     <h1>i Beer</h1>
                     <h3>Write Thirsty My Friend</h3>
                 </div>
             </header>
+            <div class="content">
             <main>
                 <article>
                     <header>
@@ -95,6 +98,7 @@
                 </article>
             </main>
             <aside>
+
                 <img src="img/author.jpg" alt="Author">
                 <h3>Jonathan Goldsmith</h3>
 
@@ -109,6 +113,7 @@
                 enough acting work to survive and wound up working various jobs, including driving a garbage truck and working in
                 construction, to help make ends meet.</p>
             </aside>
+          </div> <!--end content -->
         </div>  <!-- END .wrapper -->
 
         <footer id="site-footer">
